# nox-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  runtime.c
.github/workflows/: ci.yml
src/: context.rs  expr.rs  interpreter.rs  io.rs  jit.rs  main.rs  memory.rs  nom.rs  ops.rs  sm.rs  statement.rs  typecheck.rs  types.rs  x86.rs
src/jit/: compiler.rs  mod.rs  program.rs  runtime.rs
src/regression/: bad_programs.rs  complex_statements.rs  expr.py  expr.rs  mod.rs  simple_statements.rs  statements.py  statements.rs  test000.rs
src/scripts/: expr.py
src/sm/: compiler.rs  machine.rs  mod.rs  program.rs
src/statement/: control_flow_pass.rs  execution.rs  expr.rs  init_pass.rs  mod.rs  program.rs
src/syntax/: expr.rs  mod.rs  pascal.rs  program.rs  statement.rs  types.rs
