[package]
name = "nox"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
edition = "2018"

[dependencies]
nom = "5.1"
rustyline = "6.2"
dynasm = "1.0"
dynasmrt = "1.0"
capstone = "0.7.0"
thiserror = "1.0"
slab = "0.4.2"
fnv = "1.0.7"

[features]
generated = []
deep-expressions = []

[profile.release]
debug = true
