[package]
name = "nox"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: update to 6.1
nom = "5.1"
rustyline = "7.1"
dynasm = "1.0"
dynasmrt = "1.0"
capstone = "0.7.0"
thiserror = "1.0"
slab = "0.4.2"
fnv = "1.0.7"
# Workaround for https://github.com/myrrlyn/funty/issues/3
funty = "=1.1.0"

[features]
generated = []
deep-expressions = []

[profile.release]
debug = true
